--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ contourpy==1.1.1
 cryptography==41.0.4
 cycler==0.11.0
 cymem==2.0.8
-dataclasses-json==0.6.0
+dataclasses-json==0.5.14
 debugpy==1.8.0
 decorator==5.1.1
 dill==0.3.7
@@ -228,6 +228,7 @@ unstructured-inference==0.6.6
 unstructured.pytesseract==0.3.12
 urllib3==1.26.16
 uvicorn==0.23.2
+uvloop==0.19.0
 validators==0.22.0
 wasabi==1.1.2
 watchdog==3.0.0
@@ -239,5 +240,3 @@ xlrd==2.0.1
 XlsxWriter==3.1.5
 yarl==1.9.2
 zipp==3.16.2
-setuptools>=65.5.0 
-wheel
