--- a/requirements.txt
+++ b/requirements.txt
@@ -33,12 +33,12 @@ contourpy==1.1.1
 cryptography==41.0.4
 cycler==0.11.0
 cymem==2.0.8
-dataclasses-json==0.6.0
+dataclasses-json==0.5.14
 debugpy==1.8.0
 decorator==5.1.1
 dill==0.3.7
 dnspython==2.4.2
-duckduckgo-search==3.8.5
+duckduckgo-search==6.2.12
 EbookLib==0.18
 effdet==0.4.1
 elastic-transport==8.4.0
@@ -61,9 +61,11 @@ future==0.18.3
 gitdb==4.0.10
 GitPython==3.1.35
 gpt4all==2.0.2
+greenlet==3.0.0
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
+html2text==2020.1.16
 httpcore==0.18.0
 httptools==0.6.0
 httpx==0.25.0
@@ -80,7 +82,6 @@ itsdangerous==2.1.2
 jedi==0.19.0
 Jinja2==3.1.2
 joblib==1.3.2
-jq==1.6.0
 jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.19.0
@@ -125,6 +126,7 @@ overrides==7.4.0
 packaging==23.1
 pandas==2.1.0
 parso==0.8.3
+passlib==1.7.4
 pathspec==0.11.2
 pathy==0.10.2
 pdf2image==1.16.3
@@ -135,6 +137,7 @@ pickleshare==0.7.5
 Pillow==9.5.0
 pinecone-client==2.2.4
 platformdirs==3.10.0
+playwright==1.39.0
 portalocker==2.8.2
 posthog==3.0.2
 preshed==3.0.9
@@ -151,7 +154,9 @@ pydantic==1.10.12
 pydantic_core==2.6.3
 pydeck==0.8.0
 pydub==0.25.1
+pyee==11.0.1
 Pygments==2.16.1
+pyjwt==2.9.0
 Pympler==1.0.1
 pypandoc==1.11
 pyparsing==3.1.1
@@ -225,7 +230,6 @@ unstructured-inference==0.6.6
 unstructured.pytesseract==0.3.12
 urllib3==1.26.16
 uvicorn==0.23.2
-uvloop==0.17.0
 validators==0.22.0
 wasabi==1.1.2
 watchdog==3.0.0
@@ -236,5 +240,5 @@ wikipedia==1.4.0
 xlrd==2.0.1
 XlsxWriter==3.1.5
 yarl==1.9.2
+yfinance==0.2.43
 zipp==3.16.2
-fake-useragent==1.2.1
