--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,25 @@
 streamlit==1.26.0
 openai==1.65.2
-langchain==0.1.10
-langchain-community==0.0.25
+langchain==0.3.19
+langchain-community==0.3.18
+langchain-core==0.3.40
+langchain-text-splitters==0.3.6
 duckduckgo-search==3.9.4
 beautifulsoup4==4.12.3
 requests==2.31.0
 numpy>=1.26.4,<2
-pydantic==1.10.12
-chromadb==0.4.11
-fastapi==0.99.1
+pydantic==2.10.6
+pydantic-settings==2.8.1
+chromadb>=0.4.20
+fastapi>=0.110.0
 typing-extensions>=4.7,<5
+faiss-cpu==1.7.4
+fake-useragent==1.5.1
+wikipedia-api==0.5.8
+unstructured==0.13.1
+pdfminer.six==20221105
+python-docx==0.8.11
+yfinance==0.2.28
+pandas==1.5.3
+urllib3<2,>=1.26.2
+elastic-transport==8.4.0
